予定日時表示

--- a/apps/nano_planner/web/static/css/plan_items.scss
+++ b/apps/nano_planner/web/static/css/plan_items.scss
@@ -7,6 +7,7 @@ div.plan-items {
     span.plan-item-name {
       font-weight: bold;
     }
+    span.plan-item-duration,
     span.plan-item-description {
       font-size: 0.75rem;
     }
