--- a/apps/nano_planner/lib/nano_planner_web/templates/lesson/form.html.eex
+++ b/apps/nano_planner/lib/nano_planner_web/templates/lesson/form.html.eex
@@ -1,13 +1,13 @@
 <form action="/lessons/register">
-  <div>
+  <div class="form-group">
     <label for="user-name">ユーザー名</label>
-    <input type="text" name="user[name]" id="user-name">
+    <input type="text" name="user[name]" id="user-name" class="form-control">
   </div>
-  <div>
+  <div class="form-group">
     <label for="user-password">パスワード</label>
-    <input type="password" name="user[password]" id="user-password">
+    <input type="password" name="user[password]" id="user-password" class="form-control">
   </div>
-  <div>
-    <input type="submit" value="登録">
+  <div class="form-group">
+    <input type="submit" value="登録" class="btn btn-primary">
   </div>
 </form>
