--- a/apps/nano_planner/lib/nano_planner_web/templates/lesson/form.html.eex
+++ b/apps/nano_planner/lib/nano_planner_web/templates/lesson/form.html.eex
@@ -8,6 +8,10 @@
     <input type="password" name="user[password]" id="user-password" class="form-control">
   </div>
   <div class="form-group">
+    <label for="user-remarks">備考</label>
+    <textarea type="remarks" name="user[remarks]" id="user-remarks" class="form-control" rows="4"></textarea>
+  </div>
+  <div class="form-group">
     <input type="submit" value="登録" class="btn btn-primary">
   </div>
 </form>
