--- a/apps/nano_planner/lib/nano_planner_web/templates/plan_item/new.html.eex
+++ b/apps/nano_planner/lib/nano_planner_web/templates/plan_item/new.html.eex
@@ -2,7 +2,7 @@
 <%= form_for @changeset, action, fn f -> %>
   <div class="form-group">
     <%= label f, :name, "件名", class: "control-label" %>
-    <%= text_input f, :name, class: "form-control" %>
+    <%= text_input f, :name, class: "form-control", required: true %>
   </div>
   <div class="form-group">
     <%= label f, :description, "説明", class: "control-label" %>
@@ -10,11 +10,11 @@
   </div>
   <div class="form-group">
     <%= label f, :starts_at, "開始日時", class: "control-label" %>
-    <%= text_input f, :starts_at, class: "form-control" %>
+    <%= text_input f, :starts_at, class: "form-control", required: true %>
   </div>
   <div class="form-group">
     <%= label f, :ends_at, "終了日時", class: "control-label" %>
-    <%= text_input f, :ends_at, class: "form-control" %>
+    <%= text_input f, :ends_at, class: "form-control", required: true %>
   </div>
   <div class="form-group">
     <%= submit "追加", class: "btn btn-success" %>
