--- a/apps/nano_planner/lib/nano_planner_web/templates/plan_item/index.html.eex
+++ b/apps/nano_planner/lib/nano_planner_web/templates/plan_item/index.html.eex
@@ -7,9 +7,7 @@
       </span>
     </div>
     <div class="col-4 d-md-none text-right">
-      <%= link to: plan_item_path(@conn, :edit, item.id) do %>
-        <i class="fa fa-pencil-square fa-lg"></i>
-      <% end %>
+      <%= render "_xs_toolbar.html", conn: @conn, item: item %>
     </div>
     <div class="col-12 col-md-5">
       <span class="plan-item-description">
