--- a/apps/nano_planner/lib/nano_planner_web/templates/plan_item/index.html.eex
+++ b/apps/nano_planner/lib/nano_planner_web/templates/plan_item/index.html.eex
@@ -17,10 +17,7 @@
       </span>
     </div>
     <div class="col-3 d-none d-md-block text-right">
-      <%= link to: plan_item_path(@conn, :edit, item.id),
-        class: "btn btn-secondary btn-sm" do %>
-        <i class="fa fa-pencil-square"></i> 変更
-      <% end %>
+      <%= render "_md_toolbar.html", conn: @conn, item: item %>
     </div>
     <div class="col-12">
       <span class="plan-item-duration">
