削除ボタン設置

--- a/apps/nano_planner/lib/nano_planner_web/templates/plan_item/_md_toolbar.html.eex
+++ b/apps/nano_planner/lib/nano_planner_web/templates/plan_item/_md_toolbar.html.eex
@@ -2,3 +2,8 @@
   class: "btn btn-secondary btn-sm" do %>
   <i class="fa fa-pencil-square"></i> 変更
 <% end %>
+
+<%= link to: plan_item_path(@conn, :delete, @item.id), method: :delete,
+  class: "btn btn-secondary btn-sm" do %>
+  <i class="fa fa-trash"></i> 削除
+<% end %>
