--- a/apps/nano_planner/lib/nano_planner_web/templates/plan_item/_xs_toolbar.html.eex
+++ b/apps/nano_planner/lib/nano_planner_web/templates/plan_item/_xs_toolbar.html.eex
@@ -1,3 +1,7 @@
 <%= link to: plan_item_path(@conn, :edit, @item.id) do %>
   <i class="fa fa-pencil-square fa-lg"></i>
 <% end %>
+
+<%= link to: plan_item_path(@conn, :delete, @item.id), method: :delete do %>
+  <i class="fa fa-trash fa-lg"></i>
+<% end %>
