--- a/apps/nano_planner/lib/nano_planner_web/templates/plan_item/index.html.eex
+++ b/apps/nano_planner/lib/nano_planner_web/templates/plan_item/index.html.eex
@@ -1,3 +1,7 @@
+<%= for item <- @plan_items do %>
+  <%= render "_delete_confirmation.html", item: item, conn: @conn %>
+<% end %>
+
 <div class="container-fluid plan-items">
   <%= for item <- @plan_items do %>
   <div class="row">
