--- a/apps/nano_planner/lib/nano_planner_web/templates/plan_item/show.html.eex
+++ b/apps/nano_planner/lib/nano_planner_web/templates/plan_item/show.html.eex
@@ -1,3 +1,4 @@
+<%= render "_delete_confirmation.html", item: @plan_item, conn: @conn %>
 <div class="container-fluid plan-item">
   <div class="row">
     <div class="col-12 d-md-none text-right toolbar">
