--- a/apps/nano_planner/lib/nano_planner_web/templates/plan_item/_fields.html.eex
+++ b/apps/nano_planner/lib/nano_planner_web/templates/plan_item/_fields.html.eex
@@ -7,10 +7,8 @@
   <%= textarea @f, :description, class: "form-control", rows: 4 %>
 </div>
 <div class="form-group">
-  <%= label @f, :starts_at, "開始日時", class: "control-label" %>
-  <%= text_input @f, :starts_at, class: "form-control", required: true %>
+  <%= render "_date_and_time.html", f: @f, prefix: "s" %>
 </div>
 <div class="form-group">
-  <%= label @f, :ends_at, "終了日時", class: "control-label" %>
-  <%= text_input @f, :ends_at, class: "form-control", required: true %>
+  <%= render "_date_and_time.html", f: @f, prefix: "e" %>
 </div>
